examples/test/testpolicy1273.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1273
  namespace: namespace17
spec:
  podSelector:
    matchLabels:
      key0: value46
      key30: value17
      key32: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value45
          key30: value29
      podSelector:
        matchLabels:
          key13: value10
